<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/foodBackground"
    tools:context="com.example.foodapp.fragment.FirstFoodFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="100dp"
        android:src="@drawable/istockphoto" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/text_food"
        android:textColor="?attr/foodTextColor"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/text_bottim"
        android:textColor="?attr/foodTextColor"
        android:textSize="14sp" />

    <Button
        android:id="@+id/bottomFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="28dp"
        android:backgroundTint="?attr/foodBottonBackground"
        android:gravity="center"
        android:text="@string/text_me"
        android:textColor="?attr/foodBottonTextColor"
        android:textSize="26sp" />

</FrameLayout>